# blitz-2022-inscription

./: .editorconfig  .gitignore  README.md  application.py  astar_strategy.py  automate.py  game_interface.py  game_logic.py  greedy_strategy.py  jesse_strategy.py  js_strategy.py  requirements.txt  shape_info.py  solver.py
client/: local_game_client.py  websocket_game_client.py
rust/: Cargo.toml  build.rs  run_server.sh  server.sh
rust/src/: .gitignore  bitgrid.rs  dlx_solver.rs  exact_solver.rs  exhaustive_solver.rs  game_interface.rs  greedy_solver.rs  hybrid_solver.rs  lib.rs  main.rs  max_rects.rs  precomputed_area_32.rects  rect_inventory.rs  rect_packing.rs  rect_packing_solver.rs  scoring.rs  shape_info.rs  solver.rs  subset_sum.rs
rust/src/client/: local_game_client.rs  mod.rs  websocket_game_client.rs
rust/src/dlx/: bindings.rs  dlx.c  dlx.h  matrix.rs  mod.rs  solver.rs
