[package]
name = "application"
version = "0.1.0"
edition = "2018"

[features]
default = ["timing", "mimalloc"]
timing = []
visualize = []

[dependencies]
futures-util = "0.3"
itertools = "0.10"
ordered-float = "2.8.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["full"] }
tokio-tungstenite = "0.15"

[dependencies.mimalloc]
version = "0.1"
default-features = false
optional = true

[build-dependencies]
bindgen = "0.59"
cc = "1.0"

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
