[package]
name = "application"
version = "0.1.0"
edition = "2018"
default-run = "application"

[features]
default = ["timing"]
timing = []
visualize = []

[dependencies]
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["full"] }
tokio-tungstenite = "0.15"
ordered-float = "2.8.0"

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
